--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </style>
 </head>
 <body>
+    <div id="container"></div>
+
     <script src="js/three.js"></script>
     <script>
         var camera, scene, renderer;
@@ -20,23 +22,21 @@
 
         init();
         animate();
-
         function init() {
-            camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.01, 10);
-            camera.position.z = 1;
+                camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.01, 10);
+                camera.position.z = 1;
 
-            scene = new THREE.Scene();
+                scene = new THREE.Scene();
 
-            geometry = new THREE.BoxGeometry(0.2, 0.2, 0.2);
-            material = new THREE.MeshNormalMaterial();
+                geometry = new THREE.BoxGeometry(0.4, 0.2, 0.2);
+                material = new THREE.MeshNormalMaterial();
 
-            cube = new THREE.Mesh(geometry, material);
-            scene.add(cube);
+                cube = new THREE.Mesh(geometry, material);
+                scene.add(cube);
 
-            renderer = new THREE.WebGLRenderer();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            document.body.appendChild(renderer.domElement);
-
+                renderer = new THREE.WebGLRenderer();
+                renderer.setSize(window.innerWidth, window.innerHeight);
+                document.body.appendChild(renderer.domElement);
         }
 
         function animate() {
